fix: fixes overflow x

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -4,6 +4,8 @@ body, html {
   width: 100%;
   margin: 0;
   min-height: 100%;
+  position:relative;
+  overflow-x: hidden;
   background-color: variables.$eerie-black;
   color: variables.$cultured;
   scroll-behavior: smooth;
